[options]
python_requires = >=3.8

[flake8]
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
ignore = W504,W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django
line_length = 79
multi_line_output = 5
skip = migrations
known_django = django
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
